# fino-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: project.mdc
.github/workflows/: lint.yaml
src/fino_cli/: __init__.py  app.py  config.py  test.py
src/fino_cli/collector/: app.py  collect.py
src/fino_cli/command/: test.py
src/fino_cli/command/collector/: app.py  collect.py
src/fino_cli/parameter/: disclosure_source.py  format_type.py  storage.py  timescope.py
src/fino_cli/util/: theme.py
