[project]
name = 'fino-cli'
version = '0.1.0'
description = 'Fino CLI'
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["dynaconf>=3.2.12", "fino-core>=0.1.0", "typer>=0.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fino_core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/fino_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/fino_cli" = "fino_cli"
